# rdiff

./: .travis.yml  Cargo.toml  README.md  deploy.sh  search-index.js
examples/: file_watcher.rs  filev1.txt  filev2.txt  predefined.rs
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/rdiff/string_diff/: trait.OperationScore.js
rdiff/: index.html  sidebar-items.js  struct.BlockHashes.html  struct.Delete.html  struct.Diff.html  struct.Insert.html
rdiff/string_diff/: fn.find_diff.html  index.html  sidebar-items.js  struct.EditDistance.html  trait.OperationScore.html
src/: hashing.rs  hirschberg.rs  lib.rs  string_diff.rs  window.rs
src/rdiff/src/: hashing.rs.html  lib.rs.html  string_diff.rs.html  window.rs.html
